fix logo alignment

--- a/src/style.css
+++ b/src/style.css
@@ -27,8 +27,10 @@ a {
 }
 
 .logo {
+  display: flex;
   width: 40px;
   height: 40px;
+  align-self: center;
 }
 
 .nav__links {
